--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@types/react": "^19.1.14",
     "@types/react-dom": "^19.1.9",
     "@types/react-router-dom": "^5.3.3",
+    "@types/recharts": "^2.0.1",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.544.0",
     "postcss": "^8.5.6",
+    "recharts": "^3.2.1",
     "tailwindcss": "3.4.10",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
